# loami

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
brand/: README.md
brand/favicon/: site.webmanifest
crates/loami/: Cargo.toml
crates/loami-storage/: Cargo.toml
crates/loami-storage-azure/: Cargo.toml
crates/loami-storage-azure/src/: lib.rs
crates/loami-storage-fs/: Cargo.toml
crates/loami-storage-fs/src/: lib.rs
crates/loami-storage-memory/: Cargo.toml
crates/loami-storage-memory/src/: lib.rs
crates/loami-storage-object-store/: Cargo.toml
crates/loami-storage-object-store/src/: lib.rs
crates/loami-storage/src/: conformance.rs  error.rs  lib.rs  provider.rs  types.rs
crates/loami/src/: document.rs  engine.rs  error.rs  lib.rs  registry.rs
crates/loami/tests/: smoke.rs
docs/: book.toml
docs/src/: SUMMARY.md  api.md  document-store.md  getting-started.md  introduction.md  releasing.md  roadmap.md  storage.md
docs/src/storage/: azure.md  fs.md  memory.md
examples/tasks/: Cargo.toml  README.md
examples/tasks/src/: lib.rs  main.rs
examples/tasks/tests/: smoke.rs
