[package]
name = "loami-storage-azure"
version = "0.0.1"
description = "Azure Blob Storage StorageProvider for Loami (azure://), built on object_store."
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
loami-storage = { path = "../loami-storage" }
loami-storage-object-store = { path = "../loami-storage-object-store" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
object_store = { version = "0.13", features = ["azure"] }

[dev-dependencies]
loami-storage = { path = "../loami-storage", features = ["conformance"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
