[package]
name = "loami-storage-fs"
version = "0.1.0"
description = "Local-filesystem StorageProvider for Loami (file://), built on object_store."
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
loami-storage = { path = "../loami-storage" }
loami-storage-object-store = { path = "../loami-storage-object-store" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
object_store = "0.13"

[dev-dependencies]
loami-storage = { path = "../loami-storage", features = ["conformance"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
