[package]
name = "loami-storage-object-store"
version = "0.1.0"
description = "Shared object_store adapter helpers for Loami storage providers (fs, azure, future s3/gcs)."
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
loami-storage = { path = "../loami-storage" }
bytes = "1"
futures = "0.3"
object_store = "0.14"
