[package]
name = "loami"
version = "0.0.1"
description = "Fertile ground for your backend — an embeddable backend substrate built on compute + blob storage. Pre-alpha."
readme = "../../README.md"
keywords = ["database", "embedded", "document-store", "blob", "backend"]
categories = ["database", "database-implementations"]
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
loami-storage = { path = "../loami-storage" }
bytes = "1"
futures = "0.3"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
loami-storage-memory = { path = "../loami-storage-memory" }
loami-storage-fs = { path = "../loami-storage-fs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
