[package]
name = "loami"
version = "0.0.1"
description = "Fertile ground for your backend — an embeddable backend substrate built on compute + blob storage. Pre-alpha."
readme = "../../README.md"
keywords = ["database", "embedded", "document-store", "blob", "backend"]
categories = ["database", "database-implementations"]
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Enables the `azure://` connection scheme. Off by default so the base build stays light (the Azure
# provider pulls a full HTTP stack); memory and filesystem are always available.
azure = ["dep:loami-storage-azure"]

[dependencies]
loami-storage = { path = "../loami-storage" }
loami-storage-memory = { path = "../loami-storage-memory" }
loami-storage-fs = { path = "../loami-storage-fs" }
loami-storage-azure = { path = "../loami-storage-azure", optional = true }
bytes = "1"
futures = "0.3"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
