[package]
name = "loami"
version = "0.0.1"
description = "Fertile ground for your backend — an embeddable backend substrate built on compute + blob storage. Pre-alpha."
readme = "../../README.md"
keywords = ["database", "embedded", "document-store", "blob", "backend"]
categories = ["database", "database-implementations"]
rust-version = "1.80"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# The engine depends only on the storage contract and the in-memory provider (the one built-in
# default). Every other provider — filesystem, cloud, custom — is registered by the application, so
# the engine stays agnostic about which backends exist.
loami-storage = { path = "../loami-storage" }
loami-storage-memory = { path = "../loami-storage-memory" }
bytes = "1"
futures = "0.3"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
# Tests run against the in-memory default plus a small purpose-built `TestProvider` (defined in the
# test code), so the engine's tests depend on no provider crate beyond `mem`. `async-trait` is needed
# only to implement that test provider's `StorageProvider`.
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
